[gd_scene load_steps=5 format=3 uid="uid://bu04i2fu7rj77"]

[ext_resource type="Script" uid="uid://4ihcb5n08owx" path="res://scripts/BaseEnemy.gd" id="1_vaaym"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8fkgw"]
radius = 70.00714

[sub_resource type="CircleShape2D" id="CircleShape2D_vaaym"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_72wxb"]
radius = 13.0

[node name="base_enemy" type="CharacterBody2D"]
script = ExtResource("1_vaaym")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="detection_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
visible = false
shape = SubResource("CircleShape2D_8fkgw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_vaaym")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_72wxb")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="health_bar" type="ProgressBar" parent="."]
modulate = Color(0, 0.7764706, 0.7764706, 1)
offset_left = -6.0
offset_top = 4.0
offset_right = 114.0
offset_bottom = 31.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
